--- a/gaming.html
+++ b/gaming.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT pages</title>
+    <title>gaming</title>
 </head>
 <body>
-    <p>Im hosted with git pages</p>
-    <a href="gaming.html"target="_blank">New page</a>
+    <p style="font-family:fantasy; margin-top: 20%;" >Test123(</p>
 </body>
 </html>
