--- a/index.html
+++ b/index.html
@@ -40,5 +40,15 @@
       </fieldset>
       <input type="submit" value="Submit" />
     </form>
-  </body>
+    <!DOCTYPE html>
+    
+    
+<h2>My First JavaScript</h2>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
 </html>
